--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- preload background image -->
+    <link rel="preload" href="/background.jpg" as="image" />
+
     <title>Vite + React + TS</title>
   </head>
   <body>
