fix: change global background image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- preload background image -->
-    <link rel="preload" href="/background.jpg" as="image" />
+    <link rel="preload" href="/img/background.jpeg" as="image" />
 
     <title>Vite + React + TS</title>
   </head>
