chore: change title, add author meta

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ilya Kruchinin" />
 
     <!-- preload background image -->
     <link rel="preload" href="/img/background.jpeg" as="image" />
 
-    <title>Vite + React + TS</title>
+    <title>Apple System Window</title>
   </head>
   <body>
     <div id="root"></div>
