chore: page favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ilya Kruchinin" />
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="/favicons/window.ico" type="image/x-icon" />
+
     <!-- preload background image -->
     <link rel="preload" href="/img/background.jpeg" as="image" />
 
