fix: apple -> macOS-system-window

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- preload background image -->
     <link rel="preload" href="/img/background.jpeg" as="image" />
 
-    <title>Apple System Window</title>
+    <title>macOS System Window</title>
   </head>
   <body>
     <div id="root"></div>
